# opponents-initial-identification

./: .gitignore  README.md  opponents_identification.py  requirements.txt
.gitlab/merge_request_templates/: soccer2d_mr_template.md
mining/: mining.py  params.py  parse_log.py  play_games.py  utils.py
mining/test/: test.py
prediction/Knn/: CMakeLists.txt  knn.cpp  utils.hpp
prediction/test/: test.py  test_model.ipynb
